src/test/deca/context/invalid/modulo_float.deca
// Description:
//    modulo de float pas valide 
//
// Resultats:
//erreur
//
//
// Historique:
//    cree le 07/01/2025

{   
    float f = 3.4 % 4.0 ;
}